[tool.poetry]
name = "askul_item"
version = "0.1.0"
description = ""
authors = ["naofumi.higashikawauchi <naofumi.higashikawauchi@interman.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
single-source = "^0.2.0"
requests = "^2.27.1"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
pyproject-flake8 = "^0.0.1-alpha.2"
mypy = "^0.931"
isort = "^5.10.1"
tox = "^3.24.5"
flake8-bugbear = "^22.1.11"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
tox-gh-actions = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | dist
)
'''

[tool.flake8]
max-line-length = 119
max-complexity = 10
select = "C,E,F,W,B"
ignore = "E203"

[tool.mypy]
# common
python_version = 3.9
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.isort]
profile = "black"
line_length = 119

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, flake8, black, mypy, isort
skipsdist = true
isolated_build = true
skip_missing_interpreters = true
[testenv]
whitelist_externals = poetry
require_locked_deps = true
install_dev_deps = true
commands =
    poetry install -vv --no-root
    pytest ./tests -v --cov=askul_category --cov-branch --durations=0
[testenv:flake8]
commands = poetry run pflake8 --statistics ./askul_category ./tests
[testenv:black]
commands = poetry run black ./askul_category ./tests
[testenv:mypy]
commands = poetry run mypy ./askul_category ./tests
[testenv:isort]
commands = poetry run isort ./askul_category ./tests
"""
